// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptGrantPermissionsStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Grant permissions on your device"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/grantPermissions"
    >
      How do I grant permissions?
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": null,
      "text": "Next",
    }
  }
>
  <React.Fragment>
    Be sure the Accessibility Insights for Android Service on your device is turned on and has permission to access your device and capture screenshots.
  </React.Fragment>
  <DeviceDescription
    className="deviceDescription"
    friendlyName="Super-Duper Gadget"
    id="1"
    isEmulator={false}
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptGrantPermissionsStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Grant permissions on your device"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/grantPermissions"
    >
      How do I grant permissions?
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": null,
      "text": "Next",
    }
  }
>
  <React.Fragment>
    Be sure the Accessibility Insights for Android Service on your device is turned on and has permission to access your device and capture screenshots.
  </React.Fragment>
  <DeviceDescription
    className="deviceDescription"
    friendlyName="Emulator Extraordinaire"
    id="1"
    isEmulator={true}
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;
